Renamed 'App' component

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     {{/unless}}
   </head>
   <body>
-    <angular2-todos-playground-app>Loading...</angular2-todos-playground-app>
+    <main-app>Loading...</main-app>
     {{#each scripts.polyfills}}<script src="{{.}}"></script>{{/each}}
     <script>
       System.import('system-config.js').then(function () {
